--- a/DataDepots/DataDepots.csproj
+++ b/DataDepots/DataDepots.csproj
@@ -44,21 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommondEntity.cs" />
     <Compile Include="Config\AutofacConfig.cs" />
-    <Compile Include="DBOperate.cs" />
     <Compile Include="DBRoute.cs" />
-    <Compile Include="Define\AbsDataBaseDefine.cs" />
+    <Compile Include="Define\AbsDatabaseDefine.cs" />
     <Compile Include="Define\AbsServerDefine.cs" />
     <Compile Include="Define\AbsTableDefine.cs" />
-    <Compile Include="Define\IDataBaseDefine.cs" />
+    <Compile Include="Define\IDatabaseDefine.cs" />
     <Compile Include="Define\ITableDefine.cs" />
     <Compile Include="Depots.cs" />
     <Compile Include="Entity\Database.cs" />
     <Compile Include="Entity\Server.cs" />
     <Compile Include="Entity\Table.cs" />
-    <Compile Include="IFace\IDBOperate.cs" />
-    <Compile Include="IFace\IDBOperate2.cs" />
+    <Compile Include="IFace\IDBProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\AutoFacUtil.cs" />
   </ItemGroup>
