--- a/DataDepots/DataDepots.csproj
+++ b/DataDepots/DataDepots.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Entity\Database.cs" />
     <Compile Include="Entity\Server.cs" />
     <Compile Include="Entity\Table.cs" />
-    <Compile Include="IFace\IDBProvider.cs" />
+    <Compile Include="IFace\AbsDBProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\AutoFacUtil.cs" />
   </ItemGroup>
