将Query方法从Table转移到Database中，支持多表联合查询。

--- a/DbTimeDivider/DbTimeDivider.csproj
+++ b/DbTimeDivider/DbTimeDivider.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Entity\Database.cs" />
     <Compile Include="Entity\DivisionContext.cs" />
     <Compile Include="Entity\DbHost.cs" />
-    <Compile Include="Entity\ParticleSet.cs" />
+    <Compile Include="Entity\QueryItem.cs" />
     <Compile Include="Entity\Table.cs" />
     <Compile Include="Core\DivisionFlag.cs" />
     <Compile Include="IFace\AbsDBProvider.cs" />
