添加生成实体属性的方法 Query方法支持返回DataTable 抽取时间处理逻辑

--- a/DbTimeDivider/DbTimeDivider.csproj
+++ b/DbTimeDivider/DbTimeDivider.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\AutofacConfig.cs" />
+    <Compile Include="Core\Division.cs" />
     <Compile Include="Core\DivisionType.cs" />
     <Compile Include="Schema\AbsDbSchema.cs" />
     <Compile Include="Schema\AbsDbHostSchema.cs" />
