--- a/DbTimeDivider.Entity/DbTimeDivider.Entity.csproj
+++ b/DbTimeDivider.Entity/DbTimeDivider.Entity.csproj
@@ -4,75 +4,45 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DC5DFD61-D34D-4B62-8B3F-D79CD6B74537}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>DbTimeDivider.Demo</RootNamespace>
-    <AssemblyName>DbTimeDivider.Demo</AssemblyName>
+    <ProjectGuid>{7DB1E04A-5A75-473A-9541-8993A2157583}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>DbTimeDivider.Entity</RootNamespace>
+    <AssemblyName>DbTimeDivider.Entity</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.9.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.4.9.2\lib\net45\Autofac.dll</HintPath>
-    </Reference>
-    <Reference Include="FluentData">
-      <HintPath>..\DLL\FluentData.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Purify_ProductSaleByDay.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DbTimeDivider.Entity\DbTimeDivider.Entity.csproj">
-      <Project>{7db1e04a-5a75-473a-9541-8993a2157583}</Project>
-      <Name>DbTimeDivider.Entity</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DbTimeDivider.Schema\DbTimeDivider.Schema.csproj">
-      <Project>{55d9dabb-32c9-4df2-b7e7-d133956d8fd3}</Project>
-      <Name>DbTimeDivider.Schema</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DbTimeDivider\DbTimeDivider.csproj">
-      <Project>{d4de1c4a-e696-4c74-92d7-15af2595e92d}</Project>
-      <Name>DbTimeDivider</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
