--- a/DbTimeDivider/DbTimeDivider.csproj
+++ b/DbTimeDivider/DbTimeDivider.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Config\AutofacConfig.cs" />
     <Compile Include="Core\Division.cs" />
     <Compile Include="Core\DivisionType.cs" />
+    <Compile Include="Entity\QueryPara.cs" />
     <Compile Include="Schema\AbsDbSchema.cs" />
     <Compile Include="Schema\AbsDbHostSchema.cs" />
     <Compile Include="Schema\AbsTableSchema.cs" />
