--- a/DbTimeDivider.Schema/DbTimeDivider.Schema.csproj
+++ b/DbTimeDivider.Schema/DbTimeDivider.Schema.csproj
@@ -47,10 +47,10 @@
   <ItemGroup>
     <Compile Include="DbHost\DbHost1_\Lnsky_Test.cs" />
     <Compile Include="DbHost\DbHost1.cs" />
-    <Compile Include="DbHost\DbHost1_\Lnsky_Test_\SaleDetail.cs" />
+    <Compile Include="DbHost\DbHost1_\Lnsky_Test_\SaleDetail_Schema.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DBProvider\SqlServerDBProvider.cs" />
-    <Compile Include="DbHost\DbHost1_\Lnsky_Test_\Purify_ProductSaleByDay.cs" />
+    <Compile Include="DbHost\DbHost1_\Lnsky_Test_\Purify_ProductSaleByDay_Schema.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DbTimeDivider\DbTimeDivider.csproj">
