--- a/DbTimeDivider/DbTimeDivider.csproj
+++ b/DbTimeDivider/DbTimeDivider.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Config\AutofacConfig.cs" />
     <Compile Include="Core\Division.cs" />
     <Compile Include="Core\DivisionType.cs" />
+    <Compile Include="Entity\CacheDbContext.cs" />
+    <Compile Include="Entity\CacheQueryItem.cs" />
     <Compile Include="Entity\QueryPara.cs" />
     <Compile Include="IFace\SqlServerBaseProvider.cs" />
     <Compile Include="Schema\AbsDbSchema.cs" />
