添加对sqlite数据库支持

--- a/DbTimeDivider.Demo/DbTimeDivider.Demo.csproj
+++ b/DbTimeDivider.Demo/DbTimeDivider.Demo.csproj
@@ -43,6 +43,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\DLL\System.Data.SQLite.1.0.109\net40\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
