--- a/DbTimeDivider.Demo/app.config
+++ b/DbTimeDivider.Demo/app.config
@@ -1,3 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
+  </startup>
+  <system.data>
+    <DbProviderFactories>
+      <!--在没装Data Provider的电脑上运行程序时，需要以下配置，remove节点的作用是防止在已经安装了Data Provider的电脑上报invariant属性重复错误-->
+      <!--<remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient"
+           description=".Net Framework Data Provider for MySQL"
+           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />-->
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite"
+           description=".Net Framework Data Provider for SQLite"
+           type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+      <!--<remove invariant="Oracle.ManagedDataAccess.Client" />
+      <add name="Oracle Data Provider" invariant="Oracle.ManagedDataAccess.Client"
+           description=".Net Framework Data Provider for Oracle"
+           type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess" />
+      <remove invariant="IBM.Data.DB2" />
+      <add name="IBM DB2 .NET Data Provider" invariant="IBM.Data.DB2" description="IBM DB2 Data Provider for .NET Framework 2.0" type="IBM.Data.DB2.DB2Factory, IBM.Data.DB2" />
+      <remove invariant="Npgsql" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" description="Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql" />
+      <remove invariant="System.Data.SqlServerCe.4.0" />
+      <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>-->
+    </DbProviderFactories>
+  </system.data>
+</configuration>
