--- a/DbTimeDivider/DbTimeDivider.csproj
+++ b/DbTimeDivider/DbTimeDivider.csproj
@@ -57,8 +57,8 @@
     <Compile Include="Entity\CacheDbContext.cs" />
     <Compile Include="Entity\CacheQueryItem.cs" />
     <Compile Include="Entity\QueryPara.cs" />
-    <Compile Include="IFace\SqliteBaseProvider.cs" />
-    <Compile Include="IFace\SqlServerBaseProvider.cs" />
+    <Compile Include="Provider\SqliteBaseProvider.cs" />
+    <Compile Include="Provider\SqlServerBaseProvider.cs" />
     <Compile Include="Schema\AbsDbSchema.cs" />
     <Compile Include="Schema\AbsDbHostSchema.cs" />
     <Compile Include="Schema\AbsTableSchema.cs" />
@@ -71,7 +71,7 @@
     <Compile Include="Entity\QueryItem.cs" />
     <Compile Include="Entity\Table.cs" />
     <Compile Include="Core\DivisionFlag.cs" />
-    <Compile Include="IFace\AbsDBProvider.cs" />
+    <Compile Include="Provider\AbsDBProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\AutoFacUtil.cs" />
   </ItemGroup>
