--- a/DbTimeDivider.Demo/app.config
+++ b/DbTimeDivider.Demo/app.config
@@ -14,11 +14,11 @@
       <add name="SQLite Data Provider" invariant="System.Data.SQLite"
            description=".Net Framework Data Provider for SQLite"
            type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
-      <!--<remove invariant="Oracle.ManagedDataAccess.Client" />
+      <remove invariant="Oracle.ManagedDataAccess.Client" />
       <add name="Oracle Data Provider" invariant="Oracle.ManagedDataAccess.Client"
            description=".Net Framework Data Provider for Oracle"
            type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess" />
-      <remove invariant="IBM.Data.DB2" />
+      <!--<remove invariant="IBM.Data.DB2" />
       <add name="IBM DB2 .NET Data Provider" invariant="IBM.Data.DB2" description="IBM DB2 Data Provider for .NET Framework 2.0" type="IBM.Data.DB2.DB2Factory, IBM.Data.DB2" />
       <remove invariant="Npgsql" />
       <add name="Npgsql Data Provider" invariant="Npgsql" description="Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql" />
