--- a/DbTimeDivider.Demo/DbTimeDivider.Demo.csproj
+++ b/DbTimeDivider.Demo/DbTimeDivider.Demo.csproj
@@ -41,6 +41,10 @@
     <Reference Include="FluentData">
       <HintPath>..\DLL\FluentData.dll</HintPath>
     </Reference>
+    <Reference Include="Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DLL\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
